{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 79,
  "lineage": "6f6ebb21-ca7e-64fd-e3f3-5b1db6e434d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-practice-aws-ngw-id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08795b34c3ba94085",
            "domain": "vpc",
            "id": "eipalloc-08795b34c3ba94085",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-225-214-87.compute-1.amazonaws.com",
            "public_ip": "54.225.214.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-practice-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abc7a1842fec2c42",
            "association_id": "eipassoc-0d6e3066231a2baad",
            "domain": "vpc",
            "id": "eipalloc-0abc7a1842fec2c42",
            "instance": "i-003abf6a88bd3180e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a2f9f1352929961c",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-3-223-145-200.compute-1.amazonaws.com",
            "public_ip": "3.223.145.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_security_group.terraform-practice-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067d1e60475437da2",
            "arn": "arn:aws:ec2:us-east-1:267819470571:instance/i-01f96b357941437a8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f96b357941437a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b8ab40109b27b85",
            "private_dns": "ip-10-0-2-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f30fc87fc7ea8d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-092faa416412f9988"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccc93e345a43acd4",
            "tags": {
              "Name": "DATABASE SERVER"
            },
            "tags_all": {
              "Name": "DATABASE SERVER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092faa416412f9988"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-practice-sg",
            "aws_subnet.private-subnet",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067d1e60475437da2",
            "arn": "arn:aws:ec2:us-east-1:267819470571:instance/i-003abf6a88bd3180e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003abf6a88bd3180e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2f9f1352929961c",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0951228375d12a5d5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-092faa416412f9988"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f424c091e2d8cd7c",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092faa416412f9988"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform-practice-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-practice-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267819470571:internet-gateway/igw-0aadf5514b73e0b64",
            "id": "igw-0aadf5514b73e0b64",
            "owner_id": "267819470571",
            "tags": {
              "Name": "Terraform-Practice-IGW"
            },
            "tags_all": {
              "Name": "Terraform-Practice-IGW"
            },
            "vpc_id": "vpc-000b1b960a5250526"
          },
          "dependencies": [
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08795b34c3ba94085",
            "association_id": "eipassoc-07e3a83e296b3f370",
            "connectivity_type": "public",
            "id": "nat-0765cec329a06cf3b",
            "network_interface_id": "eni-0d8e2322cdb55f5f7",
            "private_ip": "10.0.1.75",
            "public_ip": "54.225.214.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f424c091e2d8cd7c",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.terraform-practice-aws-ngw-id",
            "aws_subnet.public-subnet",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267819470571:route-table/rtb-04e5d5d27acce9037",
            "id": "rtb-04e5d5d27acce9037",
            "owner_id": "267819470571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0765cec329a06cf3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private RT"
            },
            "tags_all": {
              "Name": "Private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b1b960a5250526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-practice-aws-ngw-id",
            "aws_nat_gateway.aws-ngw",
            "aws_subnet.public-subnet",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267819470571:route-table/rtb-0e5c378bdbb180dd1",
            "id": "rtb-0e5c378bdbb180dd1",
            "owner_id": "267819470571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aadf5514b73e0b64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b1b960a5250526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-practice-igw",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0780d0849379d0ea8",
            "route_table_id": "rtb-04e5d5d27acce9037",
            "subnet_id": "subnet-0ccc93e345a43acd4"
          },
          "dependencies": [
            "aws_eip.terraform-practice-aws-ngw-id",
            "aws_nat_gateway.aws-ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ff000fb33834b12",
            "route_table_id": "rtb-0e5c378bdbb180dd1",
            "subnet_id": "subnet-0f424c091e2d8cd7c"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-practice-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-practice-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267819470571:security-group/sg-092faa416412f9988",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092faa416412f9988",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Terraform-Practice-SG",
            "name_prefix": "",
            "owner_id": "267819470571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-Practice-SG"
            },
            "tags_all": {
              "Name": "Terraform-Practice-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b1b960a5250526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267819470571:subnet/subnet-0ccc93e345a43acd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccc93e345a43acd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267819470571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-000b1b960a5250526"
          },
          "dependencies": [
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267819470571:subnet/subnet-0f424c091e2d8cd7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f424c091e2d8cd7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267819470571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-000b1b960a5250526"
          },
          "dependencies": [
            "aws_vpc.practice-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "practice-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267819470571:vpc/vpc-000b1b960a5250526",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023bf38d7bd2c6ce7",
            "default_route_table_id": "rtb-0c21134916446aa77",
            "default_security_group_id": "sg-097a3ae9779ed5c40",
            "dhcp_options_id": "dopt-09f282411a9b45906",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000b1b960a5250526",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c21134916446aa77",
            "owner_id": "267819470571",
            "tags": {
              "Name": "Practice-VPC"
            },
            "tags_all": {
              "Name": "Practice-VPC"
            }
          }
        }
      ]
    }
  ]
}